<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="9dp"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingPrefix">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/message_log"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <ScrollView
                        android:id="@+id/scrollviewTextMessageLog"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:paddingBottom="4dp"
                        android:scrollbars="vertical">

                        <TextView
                            android:id="@+id/messagelogTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="9dp"
                            android:paddingEnd="9dp"
                            android:scrollbars="vertical"
                            android:text="@string/init"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </ScrollView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/deviceconnectionStatusTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:scrollbars="vertical"
                        android:text="@string/mobile_device_is_connected"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="10sp"
                        android:visibility="visible"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/set_id_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:maxLines="2"
                        android:scrollbars="vertical"
                        android:text="@string/set_id_button"
                        android:textColor="@color/white"
                        android:textSize="10.5sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        tools:ignore="SmallSp" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>